fixed spacing issue in scss file

--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -28,7 +28,12 @@
             overflow: hidden;
             z-index: 10;
 
-            box-shadow: 0 2.8px 2.2px rgb(0, 0, 0, 3%), 0 6.7px 5.3px rgb(0, 0, 0, 5%), 0 12.5px 10px rgb(0, 0, 0, 6%), 0 22.3px 17.9px rgb(0, 0, 0, 7%), 0 41.8px 33.4px rgb(0, 0, 0, 9%), 0 100px 80px rgb(0, 0, 0, 12%);
+            box-shadow: 0 2.8px 2.2px rgb(0, 0, 0, 3%),
+                0 6.7px 5.3px rgb(0, 0, 0, 5%),
+                0 12.5px 10px rgb(0, 0, 0, 6%),
+                0 22.3px 17.9px rgb(0, 0, 0, 7%),
+                0 41.8px 33.4px rgb(0, 0, 0, 9%),
+                0 100px 80px rgb(0, 0, 0, 12%);
 
             @include mobile {
                 align-items: flex-start;
